Fix duplicate command issue